--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "homeworks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tampoka.github.io/Homeworks",
+  "homepage": "https://Tampoka.github.io/React_training",
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
